[package]
name = "palworld-tools"
version = "0.1.0"
edition = "2021"

[dependencies.vmmap]
version = "0.6.3"
default-features = false

[dependencies.fltk]
version = "^1.4"
features = ["fltk-bundled"]

[dependencies.sysinfo]
version = "0.30.5"
default-features = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
